[package]
name = "dioxus_liveview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
dioxus = "0.3.2"
dioxus-liveview = { version = "0.3.0", features = ["axum"] }
tokio = { version = "1.25.0", features = ["full"] }
